Editor Overlap Fixes

--- a/app/assets/stylesheets/components/_buttons.css.sass
+++ b/app/assets/stylesheets/components/_buttons.css.sass
@@ -11,7 +11,7 @@
   @include transition()
 
   &:hover
-    // ???
+    color: light
 
   &[disabled]
     cursor: not-allowed
